try to fix button overlap - no success

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -44,15 +44,22 @@ main {
   margin: auto;
   margin-bottom: 3rem;
   max-width: 65vw;
-  z-index: -10;
+}
+
+.input-form {
+  position: relative;
+}
+.search-input {
+  position: relative;
+  z-index: 1;
 }
 
 .search-button {
-  width: 4rem;
   position: absolute;
-  right: 2rem;
+  width: 4rem;
   background-color: #304922;
   color: #f6efdd;
+  z-index: 3;
 }
 
 .navbar {
